feat: pack swagger docs into binary
