# docs/swagger/simplebank.swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Simplebank API",
-    "version": "1.0",
+    "version": "1.1",
     "contact": {
       "name": "Marks Paskannijs",
       "url": "https://github.com/askanymark/simplebank",
@@ -23,6 +23,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Create a new user",
+        "description": "Use this API to create a new user",
         "operationId": "Simplebank_CreateUser",
         "responses": {
           "200": {
@@ -49,12 +51,14 @@
           }
         ],
         "tags": [
-          "Simplebank"
+          "User"
         ]
       }
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Login user",
+        "description": "Use this API to login user",
         "operationId": "Simplebank_LoginUser",
         "responses": {
           "200": {
@@ -81,7 +85,7 @@
           }
         ],
         "tags": [
-          "Simplebank"
+          "User"
         ]
       }
     }
